CCG022 -edit conflict

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
@@ -69,7 +69,8 @@
 																name: '#[CCG022_20]', 
 																constraint: 'StopMessage', 
 																option: { width: '500px'},
-																enable:selectedSystemMode()==1
+																enable:selectedSystemMode()==1,
+																required:selectedSystemMode()==1
 																}"></textarea>
 						</div>
 					</div>
@@ -98,7 +99,8 @@
 																name: '#[CCG022_25]', 
 																constraint: 'StopMessage', 
 																option: { width: '500px'},
-																enable:selectedSystemMode()==2
+																enable:selectedSystemMode()==2,
+																required:selectedSystemMode()==2
 																}"></textarea>
 						</div>
 					</div>
