--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/e.xhtml
@@ -75,12 +75,12 @@
                 </tr>
                 </thead>
                 <tbody data-bind="foreach: $vm.wageTableContent().qualificationGroupSetting()">
-                <com:ko bind="eligibleQualification()" tag="foreach">
+                <com:ko bind="eligibleQualificationCode()" tag="foreach">
                     <tr>
-                        <td class="ui-widget-header"
-                            data-bind="visible: $index() ==0, attr: {rowspan: $parent.eligibleQualification().length}, text: $parent.qualificationGroupName">
+                        <td style="vertical-align: top; font-weight: normal" class="ui-widget-header"
+                            data-bind="visible: $index() ==0, attr: {rowspan: $parent.eligibleQualificationCode().length}, text: $parent.qualificationGroupName">
                         </td>
-                        <td class="ui-widget-header">
+                        <td style="font-weight: normal" class="ui-widget-header">
                             <div data-bind="text: qualificationName"></div>
                         </td>
                         <td>
@@ -95,7 +95,7 @@
                                                     },
                                                     required: true}"/>
                         </td>
-                        <td style="vertical-align: top;"  data-bind="visible: $index() ==0, attr: {rowspan: $parent.eligibleQualification().length}, text: $parent.displayPaymentMethod">
+                        <td style="vertical-align: top"  data-bind="visible: $index() ==0, attr: {rowspan: $parent.eligibleQualificationCode().length}, text: $parent.displayPaymentMethod">
                         </td>
                     </tr>
                 </com:ko>
