--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
@@ -34,7 +34,7 @@
 					<!-- A1_2 A1_3 -->
 					<span class="title" data-bind="text:title">#{i18n.getText('CCG022_10')}</span>
 					<!-- A1_4 -->
-					<button class="proceed" data-bind="click:saveData">#{i18n.getText('CCG022_12')}</button>
+					<button class="proceed" data-bind="click:saveData,enable: $root.errors.isEmpty">#{i18n.getText('CCG022_12')}</button>
 				</div>
 				<div class="contents-area">
 					<div id="group-mode"
