QMM035: Refactor package

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
@@ -10,29 +10,28 @@
     <ui:define name="htmlHead">
 
         <com:ValidatorScript>
-            nts.uk.ctx.pr.core.dom.fromsetting.Code
-            nts.uk.ctx.pr.core.dom.fromsetting.Name
-            nts.uk.ctx.pr.core.dom.fromsetting.KanaName
-            nts.uk.ctx.pr.core.dom.fromsetting.CorporateNumber
-            nts.uk.ctx.pr.core.dom.fromsetting.RepresentativeName
-            nts.uk.ctx.pr.core.dom.fromsetting.RepresentativePosition
-            nts.uk.ctx.pr.core.dom.fromsetting.PostalCode
-            nts.uk.ctx.pr.core.dom.fromsetting.AddressKana2
-            nts.uk.ctx.pr.core.dom.fromsetting.AddressKana1
-            nts.uk.ctx.pr.core.dom.fromsetting.Address2
-            nts.uk.ctx.pr.core.dom.fromsetting.Address1
-            nts.uk.ctx.pr.core.dom.fromsetting.PhoneNumber
-            nts.uk.ctx.pr.core.dom.fromsetting.Memo
-            nts.uk.ctx.pr.core.dom.fromsetting.AccountManaName
-            nts.uk.ctx.pr.core.dom.fromsetting.ContactClass
-            nts.uk.ctx.pr.core.dom.fromsetting.SalaPayMethodDueDate
-            nts.uk.ctx.pr.core.dom.fromsetting.VibLocaFinIns
-            nts.uk.ctx.pr.core.dom.fromsetting.NameBankTranfeIns
-            nts.uk.ctx.pr.core.dom.fromsetting.TaxOffice
-            nts.uk.ctx.pr.core.dom.fromsetting.BusinessLine
-            nts.uk.ctx.pr.core.dom.fromsetting.ContactName
-            nts.uk.ctx.pr.core.dom.fromsetting.AccountingOffName
-
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.Code
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.Name
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.KanaName
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.CorporateNumber
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.RepresentativeName
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.RepresentativePosition
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.PostalCode
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.AddressKana2
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.AddressKana1
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.Address2
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.Address1
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.PhoneNumber
+            nts.uk.shr.com.primitive.Memo
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.AccountManaName
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.ContactClass
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.SalaPayMethodDueDate
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.VibLocaFinIns
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.NameBankTranfeIns
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.TaxOffice
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.BusinessLine
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.ContactName
+            nts.uk.ctx.pr.report.dom.printdata.comlegalrecord.AccountingOffName
         </com:ValidatorScript>
         <com:scriptfile set="IGNITE"/>
         <com:scriptfile path="qmm035.a.vm.js"/>
