--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/l/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/l/index.xhtml
@@ -59,7 +59,7 @@
 								value: minuteFractionDigit,
 								name:'#{i18n.getText('CMF002_197')}',
  								constraint: 'DataFormatDecimalDigit', 
-								required: $vm.decimalSelectionCls(),
+								required: true,
 								enable: $vm.decimalSelectionCls(),
 								option : {width : '45px'}}" />
 						</div>
