QMM038: Refactor package

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -16,7 +16,7 @@
         <com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
         <com:ValidatorScript>
 
-            nts.uk.ctx.pr.core.dom.employaverwage.AverageWage
+            nts.uk.ctx.pr.shared.dom.employaverwage.AverageWage
 
         </com:ValidatorScript>
         <com:scriptfile set="IGNITE"/>
