Update table QMM039, QMM040

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
@@ -44,13 +44,13 @@
     </ui:define>
     <ui:define name="sidebar-content">
         <div id="tabpanel-1">
-            <div class="sidebar-content-header" style="width: 1228px">
+            <div class="sidebar-content-header">
                 <span class="title" data-bind="text : titleTab"/>
                 <!--A1_1 登録-->
                 <button tabindex="1" data-bind="click: registration, enable: isRegistrationable() &amp;&amp; $root.errors.isEmpty"
                         class="proceed">#{i18n.getText('QMM039_5')}</button>
                 <!--A1_2 個人賃金契約（項目別）-->
-                <a tabindex="11" class="goout" style="margin-left: 700px;"
+                <a tabindex="11" class="goout" style="margin-left: 630px;"
                    data-bind="ntsLinkButton: {jump: '../../040/a/index.xhtml' }">#{i18n.getText('QMM039_45')}</a>
             </div>
             <div id="com-ccg001"/>
@@ -188,7 +188,7 @@
                                             enable: enable,
                                             readonly: readonly,
                                             immediate: false,
-                                            option: {grouplength: 3}
+                                            option: {grouplength: 3, currencyformat: 'JPY'}
                                             }"/>
                                 </div>
                             </div>
