[MasterList] Update CAS009 - CAS005

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/009/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/009/a/index.xhtml
@@ -42,6 +42,10 @@
 					<button id="reference"
 						data-bind="enable: $vm.enableDetail, click: $vm.openDialog"
 						tabindex="4">#{i18n.getText('CAS009_6')}</button>
+					<!--Export Excel-->
+					<button id="reference"
+							data-bind="click: $vm.exportExcel"
+							tabindex="4">#{i18n.getText('CAS009_6')}</button>
 				</div>
 			</div>
 			<div id="contents-area" class="fixed-flex-layout">
