--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/003/a/index.xhtml
@@ -36,6 +36,9 @@
 				<button tabindex="4" id="btn_004"
 					class="button danger separate-button fix-button"
 					data-bind="click: deletePattern, enable: $root.errors.isEmpty()  &amp; isEditting()">#{i18n.getText('KSM003_22')}</button>
+				<!-- B1_4: Button Export Excel -->
+				<button class="button danger separate-button fix-button"
+						data-bind="click: exportExcel, enable: $root.errors.isEmpty() ">#{i18n.getText('KSM003_22')}</button>exportExcel
 			</div>
 			<div id="content-area">
 				<div id="left-content" style="float: left"
