--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/c.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/c.xhtml
@@ -12,10 +12,9 @@
 		<ui:define name="extended-action-bar">
 			<button tabindex="1" class="proceed"
 				data-bind="click: saveWkpAutoCal">#{i18n.getText('KMK006_9')}</button>
-			<button tabindex="-1" data-bind="click: function(){exportExcel('WorkplaceAutoCalSetting', '自動計算の登録-職場')}">#{i18n.getText('KMK006_47')}</button>
 			<button tabindex="1" class="danger"
 				data-bind="enable: createModeScreenB, click: deleteWkpAutoCal">#{i18n.getText('KMK006_26')}</button>
-
+			<button tabindex="1" data-bind="click: exportExcel">#{i18n.getText('KMK006_47')}</button>
 		</ui:define>
 
 		<ui:define name="extended-222">
