--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/d.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/d.xhtml
@@ -12,9 +12,9 @@
 		<ui:define name="extended-action-bar">
 			<button tabindex="1" class="proceed"
 				data-bind="click: saveJobAutoCal">#{i18n.getText('KMK006_9')}</button>
-			<button tabindex="-1" data-bind="click: function(){exportExcel('PositionAutoCalSetting', '自動計算の登録-職位')}">#{i18n.getText('KMK006_47')}</button>
 			<button tabindex="1" class="danger"
 				data-bind="enable: createModeScreenC, click: deleteJobAutoCal">#{i18n.getText('KMK006_26')}</button>
+			<button tabindex="1" data-bind="click: exportExcel">#{i18n.getText('KMK006_47')}</button>
 		</ui:define>
 
 		<ui:define name="extended-222">
