--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/d/index.xhtml
@@ -24,9 +24,31 @@
 			<div id="contents-area"
 				data-bind="let: { 
 						text: nts.uk.resource.getText
-					}>
+					}">
+				<div class="valign-center control-group">
+					<div data-bind="ntsFormLabel: {required: true }">#{i18n.getText('CPS003_54')}</div>
+					<label class="ntsControl limited-label" data-bind="">CategoryName từ PersonInfoCategory </label>
+
+				</div>
+				<div class="main">
+				<div data-bind="ntsFormLabel: {required: true }">#{i18n.getText('CPS003_55')}</div>
+				
+						<table id="single-list" data-bind="ntsGridList: {								
+						height: 350,
+						dataSource: items,
+						primaryKey: 'code',
+						columns: columns2,
+						deleteOptions : {visible : true, deleteField: 'deletable'},
+						features: [{name: 'Switch', options: switchOptions, optionsValue: 'code', optionsText: 'name'}],
+						multiple: true,
+						value: currentCode
+					}"></table>
+				
+				</div>
 			</div>
 			<div id="functions-area-bottom">
+
+
 				<button class="proceed x-large" data-bind="">#{i18n.getText('CPS007_16')}</button>
 				<button data-bind="click: close">#{i18n.getText('CPS007_17')}</button>
 			</div>
