--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
@@ -51,8 +51,8 @@
 					<button tabindex="5"
 						data-bind="click : openDialogB , enable : isCopy	 ">#{i18n.getText('CAS005_14')}</button>
 					<!--Export Excel-->
-					<button tabindex="3" class="danger"
-							data-bind="click : exportExcel , enable : isDelete">#{i18n.getText('CAS005_12')}</button>
+					<button tabindex="5"
+							data-bind="click : exportExcel , enable : isDelete">#{i18n.getText('CAS005_130')}</button>
 				</div>
 			</div>
 			<div id="contents-area" class="fixed-flex-layout">
