qmm019: getSortName, ghép màn

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -56,7 +56,7 @@
 									items: itemNames,
 									selected: selectedSearchIitemName,
 									selectedKey: 'itemNameCd',
-									fields: ['itemNameCd', 'name'],
+									fields: ['itemNameCd', 'shortName'],
 									mode: 'igGrid'}"/>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
                             primaryKey: 'itemNameCd',
                             columns: [
                                 { headerText: '#{i18n.getText('QMM019_108')}', key: 'itemNameCd', width: 50, formatter: _.escape},
-                                { headerText: '#{i18n.getText('QMM019_109')}', key: 'name', width: 193, formatter: _.escape}
+                                { headerText: '#{i18n.getText('QMM019_109')}', key: 'shortName', width: 193, formatter: _.escape}
                             ],
                             multiple: false,
                             value: codeSelected}"/>
@@ -92,7 +92,7 @@
                         <div class="cell valign-center">
                             <com:ko-if bind="$vm.screenControl().visibleE2_3()">
                                 <!--E2_3-->
-                                <div class="label" data-bind="text: name"/>
+                                <div class="label" data-bind="text: shortName"/>
                             </com:ko-if>
                         </div>
                     </div>
@@ -409,7 +409,7 @@
                                         </th>
                                         <td>
                                             <!--E10_11-->
-                                            <div class="label limited-label" data-bind="text: $vm.dataScreen().name"/>
+                                            <div class="label limited-label" data-bind="text: $vm.dataScreen().shortName"/>
                                         </td>
                                     </tr>
                                     <tr>
