--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -57,11 +57,11 @@
 								<button id="column-display" data-bind="text: '#{i18n.getText('CPS003_14')}'"></button>
 								<div class="fixed-width margin-left" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_15')}</div>
 								<label id="history-type">#{i18n.getText('A2_007')}</label>
-								<button data-bind="ntsHelpButton: {textId: 'KTG027_11', textParams:['{#KTG027_7}', '{#KTG027_8}', '{#KTG027_1}', '{#KTG027_9}'], position: 'right center' }">？</button>
+								<button data-bind="ntsHelpButton: {textId: 'CPS003_16', position: 'right center' }">？</button>
 						</div>
 						<div class="form-group margin-left">
 							<div class="fixed-width" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_17')}</div>
-							<button>?</button>
+							<button data-bind="ntsHelpButton: {textId: 'CPS003_18', position: 'right center'}">?</button>
 							<div class="cf" data-bind="ntsSwitchButton: {
 								name: 'A2_012',
 								options: [{id: 1, name: '#{i18n.getText('CPS003_19')}'}, {id: 2, name: '#{i18n.getText('CPS003_20')}'}],
@@ -73,10 +73,13 @@
 						</div>
 						<div class="form-group configs-bar">
 							<button id="emp-redisplay" data-bind="text: '#{i18n.getText('CPS003_21')}'"></button>
-							<button>?</button>
+							<button data-bind="ntsHelpButton: {textId: 'CPS003_22', position: 'right center'}">?</button>
 							<button id="batch-change" data-bind="text: '#{i18n.getText('CPS003_23')}'"></button>
 							<button id="settings" data-bind="cps003Setting: { typeOfEnter: ko.observable(0), fixedColumns: ko.observableArray([2,3,4]) }"></button>
 							<button id="width-save" data-bind="text: '#{i18n.getText('CPS003_24')}'"></button>
+						</div>
+						<div class="form-group">
+							<div id="grid"></div>
 						</div>
 					</div>
 				</div>
