--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/kaf005.cm.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/kaf005.cm.main.css
@@ -75,6 +75,7 @@ div.form-label.broken {
 .workSelect{
     height: 70px;
     margin-left: 45px;
+    margin-top: 10px;
 }
 .panel.panel-gray-bg {
 	float: right;
