--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -173,22 +173,25 @@
 					<div class="valign-center control-group"
 						data-bind="ntsFormLabel:{required: true}">#{i18n.getText('KAF005_35')}</div>
 				</div>
-					<div class="cell valign-center" data-bind = "if: workTypeChangeFlg" style ="width: 25px;">
-						<!--A4_7 選択ボタン-->
-						<button tabindex="7" class="workSelect"
-							data-bind="enable: $vm.editable,click : openDialogKdl003">#{i18n.getText('KAF005_36')}</button>
-					</div>
-					<div class="cell valign-center">
+				<div class="cell valign-top" data-bind = "if: workTypeChangeFlg" style ="width: 25px;">
+					<!--A4_7 選択ボタン-->
+					<button tabindex="7" class="workSelect"
+						data-bind="enable: $vm.editable,click : openDialogKdl003">#{i18n.getText('KAF005_36')}</button>
+				</div>
+				<div class="cell valign-center">
+					<div class="valign-center control-group">
 						<!--A4_2 勤務種類コード-->
 						<label class="lblWorkTypeCd" data-bind="text: workTypeCd"></label>
 						<!--A4_3 勤務種類名称--> 					
 						<LABEL data-bind="text: workTypeName"></LABEL> 
-						<BR /> 
+					</div>
+					<div class="valign-center control-group">
 						<!--A4_5 就業時間コード--> 					
 						<label class="lblSiftCd" data-bind="text: siftCD"></label> 
 						<!--A4_6 就業時間名称--> 					
 						<LABEL data-bind="text: siftName"></LABEL>
 					</div>
+				</div>
 			</div>
 			<!--勤務時間 1-->
 			<div class="valign-center control-group" >
