--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/a/index.xhtml
@@ -30,7 +30,7 @@
 				<div class="sidebar-content-header">
 					<span tabindex="1" class="title">#{i18n.getText('CAS014_2')}</span>
 					<button tabindex="2" class="proceed" data-bind="click: register">#{i18n.getText('CAS014_11')}</button>
-					<button id="print-button" data-bind="click: saveAsExcel_tab1" style="width: 120px;">#{i18n.getText('KMK007_4')}</button>
+					<button id="print-button" data-bind="click: saveAsExcel" style="width: 120px;">#{i18n.getText('KMK007_4')}</button>
 				</div>
 				<div class="contents-area-a">
 					<div class="container cf">
