--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -43,19 +43,19 @@
                                     comId: 'D2_5',
                                     items: statementItemList,
                                     selectedKey: 'code',
-                                    fields: ['itemNameCd', 'name'],
+                                    fields: ['code', 'name'],
                                     mode: 'listbox'}"></div>
                             </div>
                             <div id="D2_5" data-bind="ntsListBox: {
                             options: statementItemList,
-                            optionsValue: 'itemNameCd',
+                            optionsValue: 'code',
                             optionsText: 'name',
                             multiple: false,
                             value: selectedStatementItemCode,
                             enable: true,
                             rows: 8,
                             columns: [
-                                { key: 'itemNameCd', length: 2 },
+                                { key: 'code', length: 2 },
                                 { key: 'name', length: 8 }
                             ]}">
                             </div>
@@ -315,25 +315,25 @@
                                 <i class="search-icon"></i>
                                 <div class = "search-box-sm"  data-bind="ntsSearchBox: {
                                     searchMode: 'highlight',
-                                    targetKey: 'wageTableCode',
+                                    targetKey: 'code',
                                     comId: 'D10_5',
                                     items: wageTableList,
-                                    selectedKey: 'wageTableCode',
-                                    fields: ['wageTableCode', 'wageTableName'],
+                                    selectedKey: 'code',
+                                    fields: ['code', 'name'],
                                     mode: 'listbox'}">
                                 </div>
                             </div>
                             <div id="D10_5" data-bind="ntsListBox: {
                             options: wageTableList,
-                            optionsValue: 'wageTableCode',
-                            optionsText: 'wageTableName',
+                            optionsValue: 'code',
+                            optionsText: 'name',
                             multiple: false,
                             value: selectedWageTableCode,
                             enable: true,
                             rows: 8,
                             columns: [
-                                { key: 'wageTableCode', length: 2 },
-                                { key: 'wageTableName', length: 8 }
+                                { key: 'code', length: 2 },
+                                { key: 'name', length: 8 }
                             ]}">
                             </div>
                             <div>
@@ -355,7 +355,7 @@
                 <div>
                     <div style="width: 100px; display: inline-block;"
                          data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_45')}</div>
-                    <button style="margin-left: 10px;">#{i18n.getText('QMM017_52')}</button>
+                    <button data-bind = "click: validateSyntaxOnClick" style="margin-left: 10px;">#{i18n.getText('QMM017_52')}</button>
                     <button data-bind = "click: startTrialCalculation">#{i18n.getText('QMM017_53')}</button>
                 </div>
                 <hr></hr>
