--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
@@ -109,7 +109,81 @@
         <img style="position: relative;top: 50px; left: 520px;" src="../resource/QMM016_7.png"></img>
         <div>
             <table id="wage-table-2d">
-
+                <thead>
+	                <tr>
+	                    <th style="height: 32px; width: 150px; border: none"></th>
+	                    <th class="ui-widget-header" style="height: 32px; border: 1px solid #CCC; padding: 0 2px;">
+	                        <div data-bind="with: selectedWageTable().elementInformation().twoDimensionElement">
+	                            <div data-bind="text: elementName"></div>
+	                        </div>
+	                    </th>
+	                </tr>
+                </thead>
+                <tbody>
+                	<tr>
+                		<th class="ui-widget-header" style="height: 32px; width: 150px; border: 1px solid #CCC;">
+	                        <div data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
+	                            <div data-bind="text: elementName"></div>
+	                        </div>
+	                    </th>
+                		<td>
+                			<div style="max-width: 471px; overflow: auto;"  id="wage-table-right-header">
+                				<table>
+                					<tbody>
+   						                <tr>
+	                                        <com:ko bind="$vm.listSecondDimension" tag="foreach">
+						                    	<td class="ui-widget-header" style="height: 32px; width: 150px; border: 1px solid #CCC;"
+						                    		data-bind="text: name"></td>
+						                    </com:ko>
+					                    </tr>
+                					</tbody>
+                				</table>
+                			</div>
+                		</td>
+                	</tr>
+                	<tr>
+                		<td>
+                			<div style="height: 364px; overflow: auto; margin-top: -13px;" id="wage-table-left">
+                				<table>
+                					<tbody data-bind="foreach: $vm.wageTableContent().payment">
+						                <tr>
+						                    <th style="height: 32px; width: 150px; border: 1px solid #CCC;" class="ui-widget-header">
+							                    <div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
+							                		<span data-bind="text: masterName"></span>
+							                	</div>
+							                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 1">
+								                    <span data-bind="text: frameLowerLimit"></span>
+								                    <span>#{i18n.getText('QMM016_31')}</span>
+								                    <span data-bind="text: frameUpperLimit"></span>
+							                    </div>
+						                    </th>
+						                </tr>
+					                </tbody>
+                				</table>
+                			</div>
+                		</td>
+                		<td>
+                			<div style="height: 381px; max-width: 471px; overflow: auto;"  id="wage-table-right">
+                				<table>
+                					<tbody data-bind="foreach: $vm.wageTableContent().payment">
+						                <tr>
+						                    <com:ko bind="listSecondDms" tag="foreach">
+									            <td style="height: 32px; width: 150px; border: 1px solid #CCC; vertical-align: bottom;">
+						 				            <input data-bind="ntsNumberEditor: {
+ 						  								option: { grouplength: 3, width: '120px' }, 
+ 						   								name: '#[QMM016_39]', 
+ 						   								value: paymentAmount, 
+ 						   								constraint: 'WageTablePaymentAmount', 
+ 						   								required: true}" />  
+									            </td>
+									        </com:ko>
+						                </tr>
+					                </tbody>
+                				</table>
+                			</div>
+                		</td>
+                	</tr>
+                </tbody>
             </table>
         </div>
     </div>
