--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/d.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/d.xhtml
@@ -127,139 +127,117 @@
         <button style="margin-left: 30px;">#{i18n.getText('QMM016_37')}</button>
     </div>
     <hr></hr>
-    <div class="tab-row" data-bind="if: $vm.wageTableContent().payment().length >0">
+    <div class="tab-row" data-bind="if: $vm.wageTableContent().payment().length > 0">
         <img style="width: 96px" src="../resource/QMM016_6.png"></img>
         <div style="display: inline-block;">
             <table class = "fixed-table-top">
                 <colgroup>
                     <col width="270px"/>
                 </colgroup>
-                <thead>
-                <tr>
-                    <th colspan="5" class="ui-widget-header">
-                        <div style="width: 100px; display: inline-block; "
-                             data-bind="with: selectedWageTable().elementInformation().threeDimensionElement">
-                            <div data-bind="text: elementName"></div>
-                        </div>
-                        <div style="vertical-align: middle;" id="combo-box" data-bind="ntsComboBox: {
-	                        options: $vm.fakeCombobox,
-	                        optionsValue: 'value',
-	                        width: '150px',
-	                        visibleItemsCount: 5,
-	                        value: $vm.fakeSelectedValue,
-	                        optionsText: 'name',
-	                        enable: true,
-	                        columns: [
-	                            { prop: 'fixed_length', length: 4 },
-	                            { prop: 'name', length: 10 },
-	                        ]}"></div>
-                    </th>
-                </tr>
-                </thead>
                 <tbody>
+	                <tr>
+	                    <td class="ui-widget-header">
+	                        <div style="width: 100px; display: inline-block; "
+	                             data-bind="with: selectedWageTable().elementInformation().threeDimensionElement">
+	                            <div data-bind="text: elementName"></div>
+	                        </div>
+	                        <div style="vertical-align: middle;" id="combo-box" data-bind="ntsComboBox: {
+		                        options: $vm.listThirdDimension,
+		                        optionsValue: 'value',
+		                        width: '150px',
+		                        visibleItemsCount: 5,
+		                        value: $vm.fakeSelectedValue,
+		                        optionsText: 'name',
+		                        selectFirstIfNull: true,
+		                        enable: true,
+		                        columns: [
+		                            { prop: 'fixed_length', length: 4 },
+		                            { prop: 'name', length: 10 },
+		                        ]}"></div>
+	                    </td>
+	                </tr>
                 </tbody>
             </table>
         </div>
         <img src="../resource/QMM016_8.png"></img>
     </div>
-    <div style = "margin-top: -7px;" data-bind="if: $vm.wageTableContent().payment().length >0">
-        <div class = "custom-fixed-table-body">
-            <table class = "custom-fixed-table fixed-table-body">
-                <colgroup>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                    <col width="100px"/>
-                </colgroup>
+    <div style = "margin-top: -7px;" data-bind="if: $vm.wageTableContent().payment().length > 0">
+        <div>
+            <table class="wage-table-3d">
                 <thead>
-                <tr>
-                    <th></th>
-                    <th colspan="5" class="ui-widget-header">
-                        <div data-bind="with: selectedWageTable().elementInformation().twoDimensionElement">
-                            <div data-bind="text: elementName"></div>
-                        </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th class="ui-widget-header">
-                        <div data-bind="with: selectedWageTable().elementInformation().oneDimensionElement">
-                            <div data-bind="text: elementName"></div>
-                        </div>
-                    </th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                    <th class="ui-widget-header">次郎</th>
-                </tr>
+	                <tr>
+	                    <th style="height: 32px; width: 150px; border: none"></th>
+	                    <th class="ui-widget-header" style="height: 32px; border: 1px solid #CCC; padding: 0 2px;">
+	                        <div data-bind="with: $vm.selectedWageTable().elementInformation().twoDimensionElement">
+	                            <div data-bind="text: elementName"></div>
+	                        </div>
+	                    </th>
+	                </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
+                	<tr>
+                		<th class="ui-widget-header" style="height: 32px; width: 150px; border: 1px solid #CCC;">
+	                        <div data-bind="with: $vm.selectedWageTable().elementInformation().oneDimensionElement">
+	                            <div data-bind="text: elementName"></div>
+	                        </div>
+	                    </th>
+                		<td>
+                			<div style="max-width: 471px; overflow: auto;"  id="wage-table-right-header">
+                				<table>
+                					<tbody>
+   						                <tr>
+	                                        <com:ko bind="$vm.listSecondDimension" tag="foreach">
+						                    	<td class="ui-widget-header" style="height: 32px; width: 150px; border: 1px solid #CCC;"
+						                    		data-bind="text: name"></td>
+						                    </com:ko>
+					                    </tr>
+                					</tbody>
+                				</table>
+                			</div>
+                		</td>
+                	</tr>
+                	<tr>
+                		<td>
+                			<div style="height: 364px; overflow: auto; margin-top: -13px;" id="wage-table-left">
+                				<table>
+                					<tbody data-bind="foreach: $vm.wageTableContent2dData">
+						                <tr>
+						                    <th style="height: 32px; width: 150px; border: 1px solid #CCC;" class="ui-widget-header">
+							                    <div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 0">
+							                		<span data-bind="text: masterName"></span>
+							                	</div>
+							                	<div data-bind="if: $vm.selectedWageTable().elementInformation().oneDimensionElement().masterNumericClassification() == 1">
+								                    <span data-bind="text: frameLowerLimit"></span>
+								                    <span>#{i18n.getText('QMM016_31')}</span>
+								                    <span data-bind="text: frameUpperLimit"></span>
+							                    </div>
+						                    </th>
+						                </tr>
+					                </tbody>
+                				</table>
+                			</div>
+                		</td>
+                		<td>
+                			<div style="height: 381px; max-width: 471px; overflow: auto;"  id="wage-table-right">
+                				<table>
+                					<tbody data-bind="foreach: $vm.wageTableContent2dData">
+						                <tr>
+						                    <com:ko bind="listSecondDms" tag="foreach">
+									            <td style="height: 32px; width: 150px; border: 1px solid #CCC; vertical-align: bottom;">
+						 				            <input data-bind="ntsNumberEditor: {
+ 						  								option: { grouplength: 3, width: '120px' }, 
+ 						   								name: '#[QMM016_39]', 
+ 						   								value: paymentAmount, 
+ 						   								constraint: 'WageTablePaymentAmount', 
+ 						   								required: true}" />  
+									            </td>
+									        </com:ko>
+						                </tr>
+					                </tbody>
+                				</table>
+                			</div>
+                		</td>
+                	</tr>
                 </tbody>
             </table>
             <img src="../resource/QMM016_7.png"></img>
