QMM020 fix bug IT 126896

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -122,7 +122,8 @@
 										value: transferMethod,
 										options: itemList(),
 										optionsValue: 'code',
-										optionsText: 'name'}">
+										optionsText: 'name',
+										enable: params().startYearMonth != 0}">
                         </div>
                         <br/>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_TWO" class ="cell valign-top">
