--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/common.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/common.css
@@ -43,8 +43,9 @@ hr {
 }
 
 .text_line {
-	line-height: 37px;
-	    display: flex;
+	line-height: 25px;
+	display: flex;
+	clear: both;
 }
 
 .bold {
