--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/022/a/index.xhtml
@@ -34,7 +34,8 @@
 					<!-- A1_2 A1_3 -->
 					<span class="title" data-bind="text:title">#{i18n.getText('CCG022_10')}</span>
 					<!-- A1_4 -->
-					<button class="proceed" data-bind="click:saveData,enable: $root.errors.isEmpty">#{i18n.getText('CCG022_12')}</button>
+					<button class="proceed"
+						data-bind="click:saveData,enable: $root.errors.isEmpty">#{i18n.getText('CCG022_12')}</button>
 				</div>
 				<div class="contents-area">
 					<div id="group-mode"
@@ -45,15 +46,13 @@
 											value: selectedSystemMode }"></div>
 
 					<div id="starting-group" class="info-group">
-						<!-- A2_2 -->
 						<div class="div_line">
-							<label class="text_line" data-bind="html:infoLbl1"></label>
-						</div>
-
-						<!-- A2_3 -->
-						<div class="div_line">
+							<!-- A2_2 -->
+							<label class="text_line" style="margin-top: 3px;" data-bind="html:infoLbl1"></label>
+							<!-- A2_3 -->
 							<label class="text_line" data-bind="html:infoLbl2"></label>
 						</div>
+
 					</div>
 					<div id="in-progress-group" class="info-group">
 						<!-- A3_2 -->
@@ -64,7 +63,7 @@
 						</div>
 						<!-- A3_3 -->
 						<div class="div_line">
-							<textarea id="in_progress_message_txt" style="height: 100px"
+							<textarea id="in_progress_message_txt" style="height: 76px"
 								data-bind="ntsMultilineEditor: { value: usageStopMessage , 
 																name: '#[CCG022_20]', 
 																constraint: 'StopMessage', 
@@ -94,7 +93,7 @@
 						</div>
 						<!-- A4_5 -->
 						<div class="div_line">
-							<textarea id="stop_message_txt" style="height: 100px"
+							<textarea id="stop_message_txt" style="height: 76px"
 								data-bind="ntsMultilineEditor: { value: stopMessage , 
 																name: '#[CCG022_25]', 
 																constraint: 'StopMessage', 
