Fix bug UT QMM019

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
@@ -98,7 +98,7 @@
             <div class="table table3">
                 <div class="cell valign-center">
                     <!--H1_12-->
-                    <div id="H1_12" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM019_7')}</div>
+                    <div id="H1_12" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM019_43')}</div>
                 </div>
                 <div class="cell valign-center">
                     <!--H1_13-->
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="table table3">
-                <div class="cell valign-center">
+                <div class="cell">
                     <!--H1_15-->
                     <div id="H1_15" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM019_48')}</div>
                 </div>
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button tabindex="6" data-bind="click: decide" class="proceed">#{i18n.getText('QMM019_56')}</button>
+            <button tabindex="6" data-bind="click: decide" class="proceed">#{i18n.getText('QMM019_183')}</button>
             <button tabindex="7" data-bind="click: cancel">#{i18n.getText('QMM019_57')}</button>
         </div>
     </ui:define>
