--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/index.xhtml
@@ -27,7 +27,7 @@
                     data-bind="click: create, enable: true">#{i18n.getText('QMM012_1')}</button>
             <!-- 登録 -->
             <button id="A1_2" tabindex="2" class="proceed"
-                    data-bind="click: registered, enable: true">#{i18n.getText('QMM012_2')}</button>
+                    data-bind="click: registered, enable: statementLayoutHistData().statementCode != null">#{i18n.getText('QMM012_2')}</button>
             <!-- Excel出力 -->
             <button id="A1_3" tabindex="3" class=""
                     data-bind="click: outputExcel, enable: true">#{i18n.getText('QMM012_3')}</button>
@@ -61,10 +61,10 @@
                         <div class="valign-center control-group">
                             <!-- 履歴追加 -->
                             <button id="A2_5" tabindex="9" class=""
-                                    data-bind="click: addHistory, enable: !statementLayoutHistData().checkCreate()">#{i18n.getText('QMM019_11')}</button>
+                                    data-bind="click: addHistory, enable: statementLayoutHistData().statementCode != null">#{i18n.getText('QMM019_11')}</button>
                             <!-- 履歴編集 -->
                             <button id="A2_6" tabindex="10" class=""
-                                    data-bind="click: editHistory, enable: !statementLayoutHistData().checkCreate()">#{i18n.getText('QMM019_12')}</button>
+                                    data-bind="click: editHistory, enable: (statementLayoutHistData().statementCode != null) &amp;&amp; !statementLayoutHistData().checkCreate()">#{i18n.getText('QMM019_12')}</button>
                         </div>
                         <!-- 明細書レイアウト一覧 -->
                         <table id="treegrid1" tabindex="11"
