Datnv-126973: fix Sai color lable A2_2 màn qmm025 màn A

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
@@ -43,7 +43,7 @@
                     <div class="table">
                         <div class="cell valign-center">
                             <!--A2_2-->
-                            <div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM025_4')}</div>
+                            <div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM025_4')}</div>
                         </div>
                         <div class="cell valign-center">
                             <!--A2_3-->
