update CPS017 new

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
@@ -57,7 +57,8 @@
 					<button id="A1_008" tabindex="5" style="display: none"
 						data-bind="visible: closeUp, click: close">#{i18n.getText('CPS017_50')}</button>
 				</com:ko-if>
-				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+				
+				<button id="print-button" data-bind="click: saveAsExcel" style="width: 120px;">#{i18n.getText('CPS017_63')}</button>
 
 			</div>
 			<div id="contents-area" class="cf">
