--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -44,7 +44,7 @@
             </div>
 
             <div>
-                <div style="width: 260px" data-bind="
+                <div id="G2_3" style="width: 260px" data-bind="
                         ntsSearchBox: {
                                 targetKey: 'id',
                                 comId: 'G3_1',
