fix bug UT: 127031

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -215,6 +215,7 @@
                                 <input id="E8_2" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_143]',
                                     value: commonAmount,
+                                    required: true,
                                     option: $vm.option,
                                     constraint: 'CommonAmount'}"/>
                             </div>
