QMM020 fix bug IT 126673

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -42,7 +42,7 @@
             </div>
 
             <div>
-                <div style="width: 260px" tabindex="5"  data-bind =
+                <div id="F2_5" style="width: 260px" tabindex="5"  data-bind =
                         "ntsSearchBox: {
                         targetKey: 'id',
                         comId: 'F3_1',
