--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
@@ -21,20 +21,19 @@
                 <span id="K1_1" class="label">#{i18n.getText('QMM020_66')}</span>
             </div>
             <!-- K1_2 名称 -->
-            <div class=" table table-col-2">
+            <div class=" table table-col-3">
                 <div class="cell valign-top">
                     <div id="K1_2" data-bind="ntsFormLabel: { required: true}" style="margin: 0px 10px 0px 10px;">
                         <span class="label">#{i18n.getText('QMM020_67')}</span>
                     </div>
                 </div>
                 <div class ="cell valign-top" >
-                    <div id="K1_3" class="cell" tabIndex="1" style="display: grid;margin: 10px 0px 0px 10px"
-                         data-bind="ntsRadioBoxGroup: {
-										value: methodEditing,
-										options: itemList(),
-										optionsValue: 'code',
-										enable: isFirst,
-										optionsText: 'name'}">
+                    <div id="K1_3" class="cell" tabIndex="1" data-bind="ntsRadioBoxGroup: {
+                                                            value: methodEditing,
+                                                            options: itemList(),
+                                                            optionsValue: 'code',
+                                                            enable: isFirst,
+                                                            optionsText: 'name'}">
                     </div>
                 </div>
             </div>
