--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/qmm020.k.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/qmm020.k.style.css
@@ -1,13 +1,19 @@
+.table{
+    width: 283px;
+}
 #A{
     margin-left: 100px;
     margin-top: 8px;
 }
-
+#K1_3 {
+    padding-top: 6px !important;
+}
 .sidebar-content{
     overflow:inherit !important;
 }
 .ntsRadioBox {
     margin-bottom: 10px;
+    display: block !important;
 }
 #center {
     margin: auto;
