DatNV: fix bug 126481

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -17,7 +17,7 @@
         <div id="contents-area">
             <div id="title" style="margin-bottom: 10px">
                 <!-- J1_1 -->
-                <span id="J1_1" class="label">#{i18n.getText('QMM020_53')}</span>
+                <span id="J1_1" class="label" style="font-size: 19px;">#{i18n.getText('QMM020_53')}</span>
             </div>
             <!-- J1_2 名称 -->
             <table>
