--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/k/index.xhtml
@@ -18,7 +18,7 @@
         <div id="contents-area" style="padding: 20px;">
             <div id="title" style="margin: 0px 0px 10px 5px">
                 <!-- K1_1 -->
-                <span id="K1_1" class="label">#{i18n.getText('QMM020_66')}</span>
+                <span id="K1_1" class="label" style="font-size: 19px;">#{i18n.getText('QMM020_66')}</span>
             </div>
             <!-- K1_2 名称 -->
             <div class=" table table-col-3">
